@@ -142,6 +142,23 @@ verbosityLevel
 In our example, the call on line 23 would not print out text with the
 "verbosityLevel" option set to 3, but the call on line 25 would.
 
+The last example shows how to change the target of a format, which allows you
+to print text e.g. to STDERR.
+
+.. include:: tutorial_example_output_targets.php
+   :literal:
+
+The error message 'Unable to connect to database' will be printed in bold, with
+a red foreground color to STDOUT. The default target is
+ezcConsoleOutput::TARGET_OUTPUT, which prints to STDOUT and has standar output
+buffering in place. If you want to switch out the standard output bufferung,
+use ezcConsoleOutput::TARGET_STDOUT.
+
+Although this feature was originally not designed for that purpose, you can
+also use any other arbitrary PHP stream definition as a target. For example
+'file:///var/log/my.log' to get the messages redirected to a log file instead
+of displaying them.
+
 Mastering options and arguments
 -------------------------------
 
